# ncompile

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  cliff.toml  requirements.txt  tetron_gross.mlir
benchmarks/: gross_6_scheduled.stim  gross_72_12_6.mlir
examples/: surface_d3.mlir  surface_d3_scheduled.mlir  surface_d5.mlir  surface_d5_scheduled.mlir
include/: CMakeLists.txt
include/ncompile-c/Dialect/: QEC.h
include/ncompile/Dialect/: CMakeLists.txt
include/ncompile/Dialect/NCompile/: CMakeLists.txt  NCompileDialect.h  NCompileDialect.td  NCompileOps.td
include/ncompile/Dialect/QEC/: CMakeLists.txt  QECDialect.h  QECDialect.td  QECOps.td
include/ncompile/Transforms/: CMakeLists.txt  Passes.h  Passes.td
ncompile-opt/: CMakeLists.txt  ncompile-opt.cpp  qeccc-opt.cpp
ncompile-translate/: CMakeLists.txt  qeccc-translate.cpp
python/: CMakeLists.txt  QECModule.cpp
python/ncompile/dialects/: _ods_common.py  qec.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/ncompile-opt/: dummy.mlir  qec_ops.mlir  qec_ops_invalid.mlir  sanity_conflict.mlir  topological.mlir
tests/: integration_test.py
tools/: apply_schedule_to_stim.py  benchmark_scaling.py  diag.py  gen_gross_code.py  gen_repetition_code.py  gen_surface_code.py  gen_tetron_gross_code.py  gen_tetron_repetition_code.py  gen_tetron_surface_code.py  import_stim_to_mlir.py  run_simulations.py  stim_to_qasm.py
